# AmImUmProjectBE

./: .dockerignore  .env.example  .gitignore  BACKEND_HARDENING_CHECKLIST.md  Dockerfile  README.md  coba.py  docker-compose.yml  pyproject.toml  test_json_parsing.py
app/: main.py
app/controllers/: __init__.py  admin_router.py  article_router.py  cart_router.py  category_router.py  catergory_route.py  courier_router.py  order_router.py  pack_type_router.py  payment_router.py  product_router.py  production_router.py  rajaongkir_router.py  rating_router.py  shipment_address_router.py  shipment_router.py  user_router.py  wishlist_router.py
app/dtos/: __init__.py  admin_dashboard_dtos.py  article_dtos.py  cart_dtos.py  category_dtos.py  courier_dtos.py  error_response_dtos.py  order_dtos.py  order_item_dtos.py  pack_type_dtos.py  payment_dtos.py  product_dtos.py  product_image_dtos.py  production_dtos.py  rajaongkir_dtos.py  rating_dtos.py  shipment_address_dtos.py  shipment_dtos.py  user_dtos.py  wishlist_dtos.py
app/libs/: images_service.py  midtrans_config.py  rajaongkir_config.py  redis_config.py  sql_alchemy_lib.py  storage_media_utils.py  supabase_client.py  upload_image_to_supabase.py  verification_code.py
app/models/: __init__.py  article_model.py  cart_product_model.py  courier_model.py  enums.py  order_item_model.py  order_model.py  pack_type_model.py  (+10 more)
migrations/: env.py
tests/: test_auth_payment_minimum.py  test_order_services_regression.py  test_product_variant_pricing_views.py  test_variant_delete_and_wishlist.py  test_variant_product_flow.py
(+163 files in other folders)
